cluster/traefik-load-balancer-remote-example.yml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traefik-deployment
  namespace: traefik
  labels:
    app: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-ingress-controller
      terminationGracePeriodSeconds: 60
      containers:
      - name: traefik
        image: "traefik:1.7"
        imagePullPolicy: Always
        volumeMounts:
        - mountPath: /config
          name: config
        - mountPath: /acme
          name: acme
        ports:
        - name: http
          containerPort: 80
        - name: https
          containerPort: 443
        - name: dashboard
          containerPort: 8080
        args:
        - --logLevel=INFO
        - --configfile=/config/traefik.toml
      volumes:
      - name: config
        configMap:
          name: traefik-config
      - name: acme
        persistentVolumeClaim:
          claimName: traefik-volume
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-load-balancer
  namespace: traefik
  labels:
    app: traefik
  annotations:
    service.beta.kubernetes.io/do-loadbalancer-tls-passthrough: "true"
spec:
  selector:
    app: traefik
  type: LoadBalancer
  externalTrafficPolicy: Cluster
  sessionAffinity: None
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  - name: https
    port: 443
    targetPort: 443
    protocol: TCP
