cluster/traefik-dashboard-local-example.yml
---
kind: Service
apiVersion: v1
metadata:
  name: traefik-dashboard
  namespace: traefik
spec:
  selector:
    app: traefik
  ports:
    - name: dashboard
      port: 8080
      protocol: TCP
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: traefik-ingress
  namespace: traefik
spec:
  rules:
  - host: traefik.aboutbits.local
    http:
      paths:
      - path: /
        backend:
          serviceName: traefik-dashboard
          servicePort: dashboard
  tls:
   - secretName: traefik-cert
